# corlinma

./: .gitignore  CHANGELOG.md  CREDITS.md  Cargo.toml  README.md  pnpm-lock.yaml  pyproject.toml
TVStxt/fixed/: README.md
TVStxt/sar/: SarPrompt1.txt
TVStxt/tar/: CurrentProject.txt  HouseStyle.txt
agents/: editor.yaml  mentor.yaml  orchestrator.yaml  researcher.yaml
deploy/: config.toml.template  install.sh
docker/: Dockerfile  start.sh
docker/compose/: docker-compose.qq.yml
docs/: GAP_ANALYSIS_HERMES_OPENCLAW.md  PLAN_PORT_COMPLETION.md  architecture.md  config.example.toml  evolution-loop.md  milestones.md  observability.md  openclaw-gap-analysis.md  providers.md  release-notes-ap1.0.0.md  release-notes-v0.2.0.md  release-notes-v0.5.0.md  runbook.md
docs/contracts/: runtime-wiring.md
docs/design/: phase3-roadmap.md  phase4-next-tasks.md  phase4-roadmap.md  phase4-w2-b2-design.md  shadow-tester.md
docs/guides/: skills-and-agents.md
docs/migration/: v1-to-v2.md  v2-to-v3.md
docs/openapi/: canvas.yaml
docs/protocols/: b3-contracts.md  nodebridge.md
docs/release/: v0.3.0-checklist.md
ops/: docker-compose.observability.yml  prometheus.yml
ops/dashboards/: corlinman.json
proto/corlinman/v1/: placeholder.proto
rust/crates/corlinman-agent-client/: Cargo.toml
rust/crates/corlinman-channels/: Cargo.toml  README.md
rust/crates/corlinman-cli/: Cargo.toml
rust/crates/corlinman-core/: Cargo.toml
rust/crates/corlinman-evolution/: Cargo.toml
rust/crates/corlinman-evolution/src/: lib.rs  repo.rs  schema.rs  store.rs  types.rs
rust/crates/corlinman-gateway/: Cargo.toml
rust/crates/corlinman-gateway-api/: Cargo.toml
rust/crates/corlinman-gateway-api/src/: lib.rs
rust/crates/corlinman-hooks/: Cargo.toml
rust/crates/corlinman-hooks/src/: bus.rs  error.rs  event.rs  lib.rs  priority.rs
rust/crates/corlinman-hooks/tests/: bus.rs
rust/crates/corlinman-identity/: Cargo.toml
rust/crates/corlinman-identity/src/: error.rs  lib.rs  resolver.rs  store.rs  types.rs  verification.rs
rust/crates/corlinman-integration-tests/: Cargo.toml
rust/crates/corlinman-integration-tests/src/: lib.rs
rust/crates/corlinman-integration-tests/tests/: auto_rollback_loop.rs  b4_chain.rs  b4_full_chain.rs  b5_final.rs  config_v2_backcompat.rs  cross_subsystem_wire_up.rs  epa_subtree_composition.rs  hook_bus_smoke.rs  manifest_v1_v2.rs  placeholder_engine.rs  protocol_matrix.rs  shadow_loop.rs  v6_epa_offpath_identical.rs
rust/crates/corlinman-nodebridge/: Cargo.toml
rust/crates/corlinman-nodebridge/src/: error.rs  lib.rs  message.rs  server.rs  session.rs
rust/crates/corlinman-nodebridge/tests/: contract.rs
rust/crates/corlinman-plugins/: Cargo.toml
rust/crates/corlinman-proto/: build.rs
rust/crates/corlinman-scheduler/: Cargo.toml
rust/crates/corlinman-shadow-tester/: Cargo.toml
rust/crates/corlinman-shadow-tester/src/: eval.rs  lib.rs  runner.rs  simulator.rs
rust/crates/corlinman-shadow-tester/tests/: integration_real_fixtures.rs
rust/crates/corlinman-skills/: Cargo.toml
rust/crates/corlinman-skills/src/: error.rs  lib.rs  parse.rs  registry.rs  skill.rs
rust/crates/corlinman-skills/tests/: load.rs
rust/crates/corlinman-wstool/: Cargo.toml
rust/crates/corlinman-wstool/src/: error.rs  file_fetcher.rs  lib.rs  message.rs  runner.rs  runtime.rs  server.rs
rust/crates/corlinman-wstool/tests/: cancel.rs  file_fetcher.rs  handshake.rs  heartbeat.rs  invoke.rs
rust/crates/corlinman-wstool/tests/common/: mod.rs
scripts/e2e/: run.sh
skills/: code_review.md  memory.md  web_search.md
ui/: README.md  next.config.ts  package.json  tailwind.config.test.ts  tailwind.config.ts
ui/app/: globals.css  layout.tsx  not-found.test.tsx  not-found.tsx
ui/app/(admin)/: layout.tsx  page.tsx
ui/app/login/: page.test.tsx  page.tsx
ui/components/: cmdk-palette.test.tsx  cmdk-palette.tsx  dynamic-params-form.tsx
ui/components/__tests__/: dynamic-params-form.test.tsx
ui/components/admin/: health-ring.tsx  oauth-login-modal.tsx
ui/components/approvals/: ApprovalCard.tsx  ArgsDialog.tsx  BatchToolbar.tsx  Checkbox.tsx  DenyReasonDialog.tsx  DetailDrawerContent.tsx  EmptyState.tsx  PageHeader.tsx  StatsRow.tsx
ui/components/canvas/: canvas-hero.tsx  canvas-viewer.tsx  message-inspector.tsx  placeholder-html.ts
ui/components/channels/: channel-enable-switch.tsx  channel-shell.test.tsx  channel-shell.tsx
ui/components/characters/: character-card.test.tsx  character-card.tsx  character-drawer.test.tsx  character-drawer.tsx
ui/components/config/: success-ripple.tsx  toast-burst.tsx
ui/components/hooks/: event-row.test.tsx  event-row.tsx  event-sparkline.tsx
ui/components/identity/: identity-detail-dialog.tsx
ui/components/layout/: brand-mark.tsx  breadcrumbs.tsx  nav.tsx  page-transition.test.tsx  page-transition.tsx  route-scroll-restore.test.tsx  route-scroll-restore.tsx  sidebar.test.tsx  sidebar.tsx  tenant-switcher.test.tsx  tenant-switcher.tsx
ui/components/nodes/: runner-detail-panel.tsx  runner-node.tsx  topology-graph.test.tsx  topology-graph.tsx
ui/components/playground/: README.md  diff-highlight.ts  split-pane.tsx  token-stream.tsx
ui/components/plugins/: plugin-card.tsx  plugin-detail-header.tsx  plugins-header.tsx
ui/components/providers/: add-custom-modal.tsx
ui/components/scheduler/: scheduler-header.tsx  scheduler-history-drawer.tsx  scheduler-list-states.tsx  scheduler-row.tsx  scheduler-stats-row.tsx  scheduler-util.ts
ui/components/skills/: skill-card.test.tsx  skill-card.tsx  skill-drawer.test.tsx  skill-drawer.tsx  skills-header.tsx
ui/components/tenants/: create-tenant-dialog.test.tsx  create-tenant-dialog.tsx
ui/components/ui/: animated-number.test.tsx  animated-number.tsx  aurora-background.test.tsx  aurora-background.tsx  drawer.tsx  (+25 more)
ui/lib/: api.ts  auth.ts  channel-toggle.test.ts  motion.test.ts  motion.ts  sse.ts
ui/mock/: seed.ts  server.ts
ui/scripts/: screenshot-playground.mjs
ui/tests/: a11y-audit.test.tsx  screenshot-approvals.mjs  screenshot-canvas.mjs  screenshot-skills.mjs
(+201 files in other folders)
