[package]
name = "corlinman-evolution"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "corlinman EvolutionLoop: signals/proposals/history data model + repos. The agent proposes changes to its own skills/prompts/memory; this crate owns the persistence contract."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Wave 1-C: `EvolutionKind` derives `JsonSchema` so `corlinman-core::Config`
# can embed `BTreeMap<EvolutionKind, u32>` for the budget cap.
schemars = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = "3"
