[package]
name = "corlinman-gateway-api"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Gateway-facing trait surface (ChatService, internal chat events) that external crates (channels, scheduler) can depend on without pulling the full gateway."

[lib]
path = "src/lib.rs"

[dependencies]
corlinman-core = { path = "../corlinman-core" }

serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
