[package]
name = "corlinman-hooks"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cross-cutting event bus for the corlinman platform. Priority-tiered broadcast hooks with cooperative cancel + tracing spans."

[lib]
path = "src/lib.rs"

[dependencies]
corlinman-core = { path = "../corlinman-core" }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
serde_json = { workspace = true }
