[package]
name = "corlinman-identity"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Phase 4 Wave 2 B2 — cross-channel UserIdentityResolver. Resolves channel-scoped IDs (qq:1234, telegram:9876) to a canonical opaque user_id, with operator-driven verification-phrase protocol for safe cross-channel unification. Per-tenant scoped: each tenant has its own identity graph."

[dependencies]
corlinman-core = { path = "../corlinman-core" }
corlinman-tenant = { path = "../corlinman-tenant" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }
ulid = "1"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
