[package]
name = "corlinman-nodebridge"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "NodeBridge v1 protocol + stub server. Versioned WebSocket contract future iOS/Android/macOS device clients target; no native app is shipped from this repo."

[lib]
path = "src/lib.rs"

[dependencies]
corlinman-hooks = { path = "../corlinman-hooks" }

tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
