[package]
name = "corlinman-shadow-tester"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "corlinman ShadowTester (Phase 3 W1-A): runs medium/high-risk EvolutionProposals through an in-process eval set before they reach the operator queue, attaching shadow_metrics + baseline + eval_run_id."

[dependencies]
corlinman-core = { path = "../corlinman-core" }
corlinman-evolution = { path = "../corlinman-evolution" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
clap = { workspace = true }
tempfile = "3"
uuid = { workspace = true }
time = { workspace = true }
sha2 = { workspace = true }

[[bin]]
name = "corlinman-shadow-tester"
path = "src/bin/shadow_tester.rs"
