[package]
name = "corlinman-skills"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Skill registry: parses openclaw-style SKILL.md files (YAML frontmatter + Markdown body) and checks runtime requirements."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = "3"
