[package]
name = "corlinman-wstool"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Distributed tool-execution protocol over WebSocket. Server half plugs into PluginRuntime so remote runners are indistinguishable from local jsonrpc_stdio plugins."

[lib]
path = "src/lib.rs"

[dependencies]
corlinman-core = { path = "../corlinman-core" }
corlinman-hooks = { path = "../corlinman-hooks" }
corlinman-plugins = { path = "../corlinman-plugins" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
